Modify: Fix minor layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ h4 {
 
 p {
   font-size: 1rem;
-  width: clamp(300px, 90%, 65ch);
+  width: clamp(100px, 90%, 65ch);
 }
 
 button {
@@ -173,7 +173,7 @@ button {
 
 img {
   max-height: 800px;
-  width: 400px;
+  width: 350px;
   height: auto;
 }
 
